--- a/PokemonGo/WpfApp2/WpfApp2.csproj
+++ b/PokemonGo/WpfApp2/WpfApp2.csproj
@@ -66,6 +66,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="pokemon.cs" />
+    <Compile Include="initclass.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
