--- a/PokemonGo/WpfApp2/PokemonGo.csproj
+++ b/PokemonGo/WpfApp2/PokemonGo.csproj
@@ -58,10 +58,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Battle.xaml.cs">
+      <DependentUpon>Battle.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Capture.xaml.cs">
       <DependentUpon>Capture.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowNavigation.cs" />
+    <Page Include="Battle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Capture.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -120,12 +127,6 @@
     <Resource Include="fake_map.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="3a-b__003__xy.gif" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="3ani__025_f_xy.gif" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="playericon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -174,6 +175,9 @@
     <Resource Include="1.png" />
     <Resource Include="2.png" />
     <Resource Include="3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="battle_background.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
