--- a/PokemonGo/WpfApp2/PokemonGo.csproj
+++ b/PokemonGo/WpfApp2/PokemonGo.csproj
@@ -58,11 +58,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Battle.xaml.cs">
+      <DependentUpon>Battle.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Capture.xaml.cs">
       <DependentUpon>Capture.xaml</DependentUpon>
     </Compile>
     <Compile Include="CaptureGame.cs" />
     <Compile Include="WindowNavigation.cs" />
+    <Page Include="Battle.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Capture.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -183,6 +190,17 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="MfJw.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="battle_back.gif" />
+    <Resource Include="battle_background.png" />
+    <Resource Include="battle_front.gif" />
+    <Resource Include="battle_poke_1.gif" />
+    <Resource Include="button_change.png" />
+    <Resource Include="button_close.png" />
+    <Resource Include="button_pokemon.png" />
+    <Resource Include="button_run.png" />
+    <Resource Include="button_tick.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
