--- a/PokemonGo/WpfApp2/PokemonGo.csproj
+++ b/PokemonGo/WpfApp2/PokemonGo.csproj
@@ -726,5 +726,8 @@
     <Resource Include="Images\pokemon\back\Squirtlee.gif" />
     <Resource Include="Images\pokemon\back\Squirtleee.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Stardust.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
