Small update related to rename

--- a/PokemonGo/WpfApp2/PokemonGo.csproj
+++ b/PokemonGo/WpfApp2/PokemonGo.csproj
@@ -743,5 +743,8 @@
   <ItemGroup>
     <Resource Include="Images\battle\criticalText.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\button\ok.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
